# website-scraping-tools

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/scraping/spiders/: getHtml.py
scraping/: settings.py
scraping/spiders/: getHtml.py
