[tool.poetry]
name = "website-scraping-tools"
version = "0.1.0"
description = ""
authors = ["Hiroshi Omata <op.homata@gmail.com>"]
readme = "README.md"
packages = [{include = "website_scraping_tools"}]

[tool.poetry.dependencies]
python = "^3.11"
scrapy = "^2.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
